# ConditionalStatements

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  classroom.yml
apps/: CMakeLists.txt
include/project/: calculate_grade.h  display_message.h
src/: CMakeLists.txt  calculate_grade.cpp  display_message.cpp  library.cpp
tests/: CMakeLists.txt  display_test.cpp  grade_test.cpp  library_test.cpp
